fix a bug with text not stretching to full width

--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,9 @@ body {
   width: 100%; 
   min-height: 100vh;
   display: flex; 
+  flex-direction: column; 
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
 
 
